--- a/Zillow_Scraper/Home_Made_Crawler.ipynb
+++ b/Zillow_Scraper/Home_Made_Crawler.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,57 +41,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "metadata": {
-    "collapsed": true
+    "scrolled": true
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['10001.html',\n",
-       " '10002.html',\n",
-       " '10003.html',\n",
-       " '10004.html',\n",
-       " '10005.html',\n",
-       " '10006.html',\n",
-       " '10007.html',\n",
-       " '10009.html',\n",
-       " '10010.html',\n",
-       " '10011.html',\n",
-       " '10012.html',\n",
-       " '10013.html',\n",
-       " '10014.html',\n",
-       " '10016.html',\n",
-       " '10017.html',\n",
-       " '10018.html',\n",
-       " '10019.html',\n",
-       " '10020.html',\n",
-       " '10021.html',\n",
-       " '10022.html',\n",
-       " '10023.html',\n",
-       " '10024.html',\n",
-       " '10025.html',\n",
-       " '10026.html',\n",
-       " '10027.html',\n",
-       " '10028.html',\n",
-       " '10029.html',\n",
-       " '10030.html',\n",
-       " '10031.html',\n",
-       " '10032.html',\n",
-       " '10033.html',\n",
-       " '10034.html',\n",
-       " '10035.html',\n",
-       " '10036.html',\n",
-       " '10037.html',\n",
-       " '10038.html',\n",
-       " '10039.html',\n",
-       " '10040.html',\n",
-       " '10044.html',\n",
-       " '10065.html',\n",
-       " '10075.html',\n",
-       " '10128.html',\n",
-       " '10280.html']"
+       "['48126.html',\n",
+       " '48201.html',\n",
+       " '48202.html',\n",
+       " '48203.html',\n",
+       " '48204.html',\n",
+       " '48205.html',\n",
+       " '48206.html',\n",
+       " '48207.html',\n",
+       " '48208.html',\n",
+       " '48209.html',\n",
+       " '48210.html',\n",
+       " '48211.html',\n",
+       " '48212.html',\n",
+       " '48213.html',\n",
+       " '48214.html',\n",
+       " '48215.html',\n",
+       " '48216.html',\n",
+       " '48217.html',\n",
+       " '48219.html',\n",
+       " '48221.html',\n",
+       " '48223.html',\n",
+       " '48224.html',\n",
+       " '48225.html',\n",
+       " '48226.html',\n",
+       " '48227.html',\n",
+       " '48228.html',\n",
+       " '48233.html',\n",
+       " '48234.html',\n",
+       " '48235.html',\n",
+       " '48236.html',\n",
+       " '48238.html',\n",
+       " '48239.html',\n",
+       " '48240.html',\n",
+       " '48243.html']"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "html_file_path = r'C:\\Users\\austi\\Documents\\Github_Repos\\Imperial_Applied_Project\\Detroit\\ZipCodes\\HTML_Data'\n",
+    "html_files = os.listdir(html_file_path)\n",
+    "#TODO: loop through HTML Dir and grab only the HTML files\n",
+    "html_files"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "with open(html_file_path +'\\\\'+ html_files[0]) as fp:\n",
+    "    soup = BeautifulSoup(fp)\n",
+    "fp.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "web_link = []\n",
+    "for link in soup.body.find_all('div', class_ = 'zsg-photo-card-content zsg-aspect-ratio-content'):\n",
+    "    web_link.append('https://www.zillow.com'+ link.find('a').get('href'))\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'https://www.zillow.com/homedetails/5275-Neckel-St-APT-2-Dearborn-MI-48126/2093126182_zpid/'"
       ]
      },
      "execution_count": 23,
@@ -100,83 +138,7 @@
     }
    ],
    "source": [
-    "html_file_path = 'C://Users//austi//Documents//Github_Repos//Imperial_Applied_Project\\\\Manhattan\\\\ZipCodes\\\\HTML_Data'\n",
-    "html_files = os.listdir(html_file_path)\n",
-    "#TODO: loop through HTML Dir and grab only the HTML files\n",
-    "html_files"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[0,\n",
-       " 25,\n",
-       " 25,\n",
-       " 25,\n",
-       " 25,\n",
-       " 25,\n",
-       " 25,\n",
-       " 25,\n",
-       " 0,\n",
-       " 0,\n",
-       " 25,\n",
-       " 25,\n",
-       " 25,\n",
-       " 0,\n",
-       " 25,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 25,\n",
-       " 25,\n",
-       " 25,\n",
-       " 25,\n",
-       " 25,\n",
-       " 0,\n",
-       " 0,\n",
-       " 25,\n",
-       " 0,\n",
-       " 0,\n",
-       " 25,\n",
-       " 25,\n",
-       " 25,\n",
-       " 25,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 25,\n",
-       " 0,\n",
-       " 25,\n",
-       " 25,\n",
-       " 25,\n",
-       " 25,\n",
-       " 25,\n",
-       " 25]"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "num_homes_in_file(html_files, html_file_path)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open(html_file_path + '\\\\'+ \".html\") as fp:\n",
-    "    soup = BeautifulSoup(fp)\n",
-    "fp.close()"
+    "web_link[1]"
    ]
   },
   {
@@ -206,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,6 +180,31 @@
     "        if link != None:\n",
     "            links.append(link)\n",
     "            #TODO: get the max number of pages and set the base link; then loop through the base link until the max number of pages"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['/homes/48126_rb/2_p/',\n",
+       " '/homes/48126_rb/3_p/',\n",
+       " '/homes/48126_rb/4_p/',\n",
+       " '/homes/48126_rb/5_p/',\n",
+       " '/homes/48126_rb/8_p/',\n",
+       " '/homes/48126_rb/2_p/']"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "links"
    ]
   },
   {
@@ -260,7 +247,7 @@
    "outputs": [],
    "source": [
     "def deep_dive(links):\n",
-    "    os.chdir('')\n",
+    "    os.chdir\n",
     "    home = 1\n",
     "    for i in links:\n",
     "        urllib.request.urlretrieve(i, \"home_\" + str(home) + \".txt\")\n",
