Added testing and html files

--- a/Zillow_Scraper/Home_Made_Crawler.ipynb
+++ b/Zillow_Scraper/Home_Made_Crawler.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
@@ -82,10 +82,11 @@
        " '48238.html',\n",
        " '48239.html',\n",
        " '48240.html',\n",
-       " '48243.html']"
+       " '48243.html',\n",
+       " 'Zillow_HTML_Dictionary.py']"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -99,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
