finished data cleaning

--- a/Zillow_Scraper/WebScraper_V3_BS.ipynb
+++ b/Zillow_Scraper/WebScraper_V3_BS.ipynb
@@ -1,10 +1,48 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "heading_collapsed": true
+   },
+   "source": [
+    "## Description:\n",
+    "* Can utilize Selenium to acces the Zillow Website and scrape for all of the homes in the Detroit Zip Codes (Post Codes) given\n",
+    "* Can also read HTML files saved locally in specified directory tree structure (what was used in this case)\n",
+    "1. Pulls the data from the HTML file based on the HTML Structure\n",
+    "2. Hashes all of the data into dictionary format and then saves the dictionaries into python PKL formats"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "heading_collapsed": true,
+    "hidden": true
+   },
+   "source": [
+    "#### Header:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>.container { width:100% !important; }</style>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from IPython.core.display import display, HTML\n",
     "display(HTML(\"<style>.container { width:100% !important; }</style>\"))\n",
@@ -36,9 +74,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "heading_collapsed": true
+   },
+   "source": [
+    "## Main:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 42,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -2858,126 +2907,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def run_locally():\n",
-    "    \n",
-    "    #driver = setup_driver()\n",
-    "    #time.sleep(3)\n",
-    "    \n",
-    "    data_dict_path = 'C:/Users/austi/Documents/Github_Repos/Imperial_Applied_Project/Detroit/Saved_Data/Test_Data_Dict/'\n",
-    "    #saved_data_html_path = 'C:/Users/austi/Documents/Github_Repos/Imperial_Applied_Project/Detroit/Saved_Data/HTML/'\n",
-    "    os.chdir(data_dict_path)\n",
-    "    #zip_code_text_file_path = 'C:/Users/austi/Documents/Github_Repos/Imperial_Applied_Project/Detroit/ZipCodes/Detriot_ZipCodes.txt'\n",
-    "    #zip_codes_text_file_list = read_zip_code_txt(zip_code_text_file_path)\n",
-    "    \n",
-    "    #loop_zip_code(driver, zip_codes_text_file_list)\n",
-    "    #driver = driver\n",
-    "    html_path = 'C:/Users/austi/Documents/Github_Repos/Imperial_Applied_Project/Detroit/Saved_Data/HTML/'\n",
-    "    #data_dict_path = 'C:/Users/austi/Documents/Github_Repos/Imperial_Applied_Project/Detroit/Saved_Data/Data_Dict/'\n",
-    "    \n",
-    "    for zip_code in os.listdir(html_path):\n",
-    "        print(zip_code)\n",
-    "        completed_dict = {}\n",
-    "        data_dict = {}\n",
-    "        loaded_old_dict = False\n",
-    "        #count = 1\n",
-    "        if os.path.exists(data_dict_path+ zip_code + '.pkl'):\n",
-    "            data_dict = load_Dictionary(data_dict_path, file_name=zip_code)\n",
-    "            loaded_old_dict = True\n",
-    "        if os.path.exists(data_dict_path + 'Completed_Files.pkl'):\n",
-    "            completed_dict = load_Dictionary(data_dict_path, 'Completed_Files')\n",
-    "        \n",
-    "        for file in os.listdir(html_path + zip_code):\n",
-    "            \n",
-    "            if (zip_code + '_' + file) in completed_dict.keys():\n",
-    "                #print(f'Already processed and Saved: {file}')\n",
-    "                continue\n",
-    "            \n",
-    "            print(f'Scraping... {file}')\n",
-    "            with open(html_path + zip_code +'/'+ file, encoding='utf8') as fp:\n",
-    "                soup = BeautifulSoup(fp)\n",
-    "            fp.close()\n",
-    "            #soup = BeautifulSoup(driver.page_source)\n",
-    "            #time.sleep(2)\n",
-    "            \n",
-    "            zpid = get_zpid(soup)\n",
-    "            \n",
-    "            if (zpid in data_dict.keys()) and (loaded_old_dict == False):\n",
-    "                print(f'Check Keys: {zpid}, file: {file}')\n",
-    "                #input('Enter something to continue: ')\n",
-    "            if (zpid in data_dict.keys()) and (loaded_old_dict == True):\n",
-    "                print(f'Already Scraped, {zpid} size: {len(data_dict[zpid].keys())}')\n",
-    "                completed_dict.update({zip_code + '_' + file: None})\n",
-    "                save_Dictionary(obj=completed_dict, name='Completed_Files')\n",
-    "                #driver = driver.close()\n",
-    "                continue\n",
-    "            \n",
-    "            data_dict.update({zpid: {}})\n",
-    "            \n",
-    "            data_dict[zpid] = get_allHouseData(\n",
-    "            data_dict[zpid],\n",
-    "            get_overviewStats(soup),\n",
-    "            get_textDescription(soup),\n",
-    "            get_factsAndFeatures(soup),\n",
-    "            get_homeDetails(soup),\n",
-    "            get_numberOfPhotos(soup),\n",
-    "            get_expandableFactsAndFeatures(soup),\n",
-    "            get_gpsCoordinates(soup),\n",
-    "            #get_homeValues(soup),\n",
-    "            get_nearbySchools(soup),\n",
-    "            #get_commuteScores(soup)\n",
-    "            )\n",
-    "            completed_dict.update({zip_code + '_' + file: None})\n",
-    "            save_Dictionary(obj=data_dict, name=zip_code)\n",
-    "            save_Dictionary(obj=completed_dict, name='Completed_Files')\n",
-    "            #count += 1\n",
-    "\n",
-    "        #print(data_dict)\n",
-    "        \n",
-    "    save_Dictionary(data_dict, zip_code)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true
-   },
-   "source": [
-    "#### Scrap"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
+    "heading_collapsed": true,
     "hidden": true
    },
-   "outputs": [],
    "source": [
-    "'''\n",
-    "\n",
-    "temp = file\n",
-    "            temp = temp.replace(' ', '_').replace(',', '')\n",
-    "            ''.join(e for e in temp if e.isalnum())\n",
-    "            #mls_num = re.findall(\"(___MLS_#)(\\d+)\", temp)\n",
-    "\n",
-    "            new_html_name = re.sub(\"(___MLS_#)(\\d+)\", '', temp)\n",
-    "            print(new_html_name)\n",
-    "            \n",
-    "            if not os.path.exists(html_path + zip_code +'/'+ new_html_name):\n",
-    "                os.rename(html_path + zip_code +'/'+ file, html_path + zip_code +'/'+ new_html_name)\n",
-    "                \n",
-    "                forclosure = check_forclosure(driver)\n",
-    "            if forclosure:\n",
-    "                print(f'Forclosure: {file}')\n",
-    "                #driver = driver.close()\n",
-    "                #os.rename(html_path + zip_code +'/'+ file, html_path + zip_code +'/'+ 'FORCLOSED_'+ file)\n",
-    "                continue\n",
-    "'''"
+    "#### Testing"
    ]
   },
   {
@@ -6770,10 +6706,11 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
-    "#### Scrap/Testing"
+    "#### Testing"
    ]
   },
   {
@@ -6884,27 +6821,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
-   "metadata": {
-    "hidden": true
-   },
-   "outputs": [],
-   "source": [
-    "#Original pop-up Window\n",
-    "#driver.get(r'C:\\Users\\austi\\Documents\\Github_Repos\\Imperial_Applied_Project\\Testing_HTML\\pop_up_window.html')\n",
-    "\n",
-    "###### Zipcode Window\n",
-    "#driver.get(r'C:\\Users\\austi\\Documents\\Github_Repos\\Imperial_Applied_Project\\Testing_HTML\\48206.html')\n",
-    "#New Pop Up Window Test\n",
-    "#driver.get(r'C:\\Users\\austi\\Documents\\Github_Repos\\Imperial_Applied_Project\\Testing_HTML\\48206_pop_up_window.html')\n",
-    "#No Results Example\n",
-    "#driver.get(r'C:\\Users\\austi\\Documents\\Github_Repos\\Imperial_Applied_Project\\Testing_HTML\\48205_No_Results_Example.html')\n",
-    "#Vacant Lot Example\n",
-    "#driver.get(r'C:\\Users\\austi\\Documents\\Github_Repos\\Imperial_Applied_Project\\Testing_HTML\\Vacant_Lot_Example.html')"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 21,
    "metadata": {
     "hidden": true
@@ -7006,15 +6922,19 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
-    "#### Functions"
+    "## Functions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "#####################################################\n",
@@ -7024,6 +6944,82 @@
     "\n",
     "'''\n",
     "#####################################################\n",
+    "def run_locally():\n",
+    "    \n",
+    "    #driver = setup_driver()\n",
+    "    #time.sleep(3)\n",
+    "    \n",
+    "    data_dict_path = 'C:/Users/austi/Documents/Github_Repos/Imperial_Applied_Project/Detroit/Saved_Data/Test_Data_Dict/'\n",
+    "    #saved_data_html_path = 'C:/Users/austi/Documents/Github_Repos/Imperial_Applied_Project/Detroit/Saved_Data/HTML/'\n",
+    "    os.chdir(data_dict_path)\n",
+    "    #zip_code_text_file_path = 'C:/Users/austi/Documents/Github_Repos/Imperial_Applied_Project/Detroit/ZipCodes/Detriot_ZipCodes.txt'\n",
+    "    #zip_codes_text_file_list = read_zip_code_txt(zip_code_text_file_path)\n",
+    "    \n",
+    "    #loop_zip_code(driver, zip_codes_text_file_list)\n",
+    "    #driver = driver\n",
+    "    html_path = 'C:/Users/austi/Documents/Github_Repos/Imperial_Applied_Project/Detroit/Saved_Data/HTML/'\n",
+    "    #data_dict_path = 'C:/Users/austi/Documents/Github_Repos/Imperial_Applied_Project/Detroit/Saved_Data/Data_Dict/'\n",
+    "    \n",
+    "    for zip_code in os.listdir(html_path):\n",
+    "        print(zip_code)\n",
+    "        completed_dict = {}\n",
+    "        data_dict = {}\n",
+    "        loaded_old_dict = False\n",
+    "        #count = 1\n",
+    "        if os.path.exists(data_dict_path+ zip_code + '.pkl'):\n",
+    "            data_dict = load_Dictionary(data_dict_path, file_name=zip_code)\n",
+    "            loaded_old_dict = True\n",
+    "        if os.path.exists(data_dict_path + 'Completed_Files.pkl'):\n",
+    "            completed_dict = load_Dictionary(data_dict_path, 'Completed_Files')\n",
+    "        \n",
+    "        for file in os.listdir(html_path + zip_code):\n",
+    "            \n",
+    "            if (zip_code + '_' + file) in completed_dict.keys():\n",
+    "                #print(f'Already processed and Saved: {file}')\n",
+    "                continue\n",
+    "            \n",
+    "            print(f'Scraping... {file}')\n",
+    "            with open(html_path + zip_code +'/'+ file, encoding='utf8') as fp:\n",
+    "                soup = BeautifulSoup(fp)\n",
+    "            fp.close()\n",
+    "            #soup = BeautifulSoup(driver.page_source)\n",
+    "            #time.sleep(2)\n",
+    "            \n",
+    "            zpid = get_zpid(soup)\n",
+    "            \n",
+    "            if (zpid in data_dict.keys()) and (loaded_old_dict == False):\n",
+    "                print(f'Check Keys: {zpid}, file: {file}')\n",
+    "                #input('Enter something to continue: ')\n",
+    "            if (zpid in data_dict.keys()) and (loaded_old_dict == True):\n",
+    "                print(f'Already Scraped, {zpid} size: {len(data_dict[zpid].keys())}')\n",
+    "                completed_dict.update({zip_code + '_' + file: None})\n",
+    "                save_Dictionary(obj=completed_dict, name='Completed_Files')\n",
+    "                #driver = driver.close()\n",
+    "                continue\n",
+    "            \n",
+    "            data_dict.update({zpid: {}})\n",
+    "            \n",
+    "            data_dict[zpid] = get_allHouseData(\n",
+    "            data_dict[zpid],\n",
+    "            get_overviewStats(soup),\n",
+    "            get_textDescription(soup),\n",
+    "            get_factsAndFeatures(soup),\n",
+    "            get_homeDetails(soup),\n",
+    "            get_numberOfPhotos(soup),\n",
+    "            get_expandableFactsAndFeatures(soup),\n",
+    "            get_gpsCoordinates(soup),\n",
+    "            #get_homeValues(soup),\n",
+    "            get_nearbySchools(soup),\n",
+    "            #get_commuteScores(soup)\n",
+    "            )\n",
+    "            completed_dict.update({zip_code + '_' + file: None})\n",
+    "            save_Dictionary(obj=data_dict, name=zip_code)\n",
+    "            save_Dictionary(obj=completed_dict, name='Completed_Files')\n",
+    "            #count += 1\n",
+    "\n",
+    "        #print(data_dict)\n",
+    "        \n",
+    "    save_Dictionary(data_dict, zip_code)\n",
     "\n",
     "def play_sound(self, etype, value, tb, tb_offset=None):\n",
     "    self.showtraceback((etype, value, tb), tb_offset=tb_offset)\n",
