Finished Model and Model Charts

--- a/Zillow_Scraper/Data_Cleaning/Data_Cleaning_V2.ipynb
+++ b/Zillow_Scraper/Data_Cleaning/Data_Cleaning_V2.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -48,23 +48,21 @@
     "from pandas.api.types import CategoricalDtype\n",
     "import seaborn as sns\n",
     "from scipy import stats\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "pd.options.display.float_format = '{:.2f}'.format"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Main"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 39,
    "metadata": {
-    "hidden": true,
     "scrolled": true
    },
    "outputs": [
@@ -186,19 +184,19 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Average_School_Rating</th>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
+       "      <td>3.50</td>\n",
+       "      <td>3.50</td>\n",
+       "      <td>3.50</td>\n",
+       "      <td>3.50</td>\n",
+       "      <td>3.50</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Average_School_Distance</th>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
+       "      <td>1.20</td>\n",
+       "      <td>1.20</td>\n",
+       "      <td>1.20</td>\n",
+       "      <td>1.20</td>\n",
+       "      <td>1.20</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>School_Listed_Binary</th>\n",
@@ -440,6 +438,14 @@
        "      <td>NO DATA</td>\n",
        "      <td>NO DATA</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Zip_Code</th>\n",
+       "      <td>48201</td>\n",
+       "      <td>48201</td>\n",
+       "      <td>48201</td>\n",
+       "      <td>48201</td>\n",
+       "      <td>48201</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -455,8 +461,8 @@
        "Year_Built                                                  1905.00   \n",
        "New_Construction                                               0.00   \n",
        "Hoa_Fee                                                         254   \n",
-       "Average_School_Rating                                          0.00   \n",
-       "Average_School_Distance                                        0.00   \n",
+       "Average_School_Rating                                          3.50   \n",
+       "Average_School_Distance                                        1.20   \n",
        "School_Listed_Binary                                          False   \n",
        "Time_On_Zillow                                                55.00   \n",
        "Price                                                     549000.00   \n",
@@ -487,6 +493,7 @@
        "Construction_Materials_Cat                                    BRICK   \n",
        "Exterior_Features_Cat                                         BRICK   \n",
        "Architectural_Style_Cat                                    HISTORIC   \n",
+       "Zip_Code                                                      48201   \n",
        "\n",
        "House_Id                                            2090771520_zpid  \\\n",
        "Bedrooms                                                       2.00   \n",
@@ -498,8 +505,8 @@
        "Year_Built                                                  1905.00   \n",
        "New_Construction                                               0.00   \n",
        "Hoa_Fee                                                         254   \n",
-       "Average_School_Rating                                          0.00   \n",
-       "Average_School_Distance                                        0.00   \n",
+       "Average_School_Rating                                          3.50   \n",
+       "Average_School_Distance                                        1.20   \n",
        "School_Listed_Binary                                          False   \n",
        "Time_On_Zillow                                                54.00   \n",
        "Price                                                     584900.00   \n",
@@ -530,6 +537,7 @@
        "Construction_Materials_Cat                                    BRICK   \n",
        "Exterior_Features_Cat                                         BRICK   \n",
        "Architectural_Style_Cat                                    HISTORIC   \n",
+       "Zip_Code                                                      48201   \n",
        "\n",
        "House_Id                                             2085043646_zpid  \\\n",
        "Bedrooms                                                        1.00   \n",
@@ -541,8 +549,8 @@
        "Year_Built                                                   1920.00   \n",
        "New_Construction                                                0.00   \n",
        "Hoa_Fee                                                          292   \n",
-       "Average_School_Rating                                           0.00   \n",
-       "Average_School_Distance                                         0.00   \n",
+       "Average_School_Rating                                           3.50   \n",
+       "Average_School_Distance                                         1.20   \n",
        "School_Listed_Binary                                           False   \n",
        "Time_On_Zillow                                                130.00   \n",
        "Price                                                      297000.00   \n",
@@ -573,6 +581,7 @@
        "Construction_Materials_Cat                                   NO DATA   \n",
        "Exterior_Features_Cat                                        NO DATA   \n",
        "Architectural_Style_Cat                                      NO DATA   \n",
+       "Zip_Code                                                       48201   \n",
        "\n",
        "House_Id                                          88380061_zpid  \\\n",
        "Bedrooms                                                   2.00   \n",
@@ -584,8 +593,8 @@
        "Year_Built                                              2002.00   \n",
        "New_Construction                                           0.00   \n",
        "Hoa_Fee                                                       0   \n",
-       "Average_School_Rating                                      0.00   \n",
-       "Average_School_Distance                                    0.00   \n",
+       "Average_School_Rating                                      3.50   \n",
+       "Average_School_Distance                                    1.20   \n",
        "School_Listed_Binary                                      False   \n",
        "Time_On_Zillow                                             0.00   \n",
        "Price                                                 329467.00   \n",
@@ -616,6 +625,7 @@
        "Construction_Materials_Cat                              NO DATA   \n",
        "Exterior_Features_Cat                                     OTHER   \n",
        "Architectural_Style_Cat                                 NO DATA   \n",
+       "Zip_Code                                                  48201   \n",
        "\n",
        "House_Id                                      2083788163_zpid  \n",
        "Bedrooms                                                 3.00  \n",
@@ -627,8 +637,8 @@
        "Year_Built                                            2019.00  \n",
        "New_Construction                                         0.00  \n",
        "Hoa_Fee                                                   461  \n",
-       "Average_School_Rating                                    0.00  \n",
-       "Average_School_Distance                                  0.00  \n",
+       "Average_School_Rating                                    3.50  \n",
+       "Average_School_Distance                                  1.20  \n",
        "School_Listed_Binary                                    False  \n",
        "Time_On_Zillow                                          47.00  \n",
        "Price                                              1600000.00  \n",
@@ -658,10 +668,11 @@
        "Structure_Type_Cat                                    NO DATA  \n",
        "Construction_Materials_Cat                              OTHER  \n",
        "Exterior_Features_Cat                                   OTHER  \n",
-       "Architectural_Style_Cat                               NO DATA  "
+       "Architectural_Style_Cat                               NO DATA  \n",
+       "Zip_Code                                                48201  "
       ]
      },
-     "execution_count": 234,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -704,6 +715,12 @@
     "data.Store_Name[other_cat.index] = 'Other'\n",
     "data.Store_Name = data.Store_Name.astype('category')\n",
     "\n",
+    "# Remove 0 from School Distance and School Rating: replace with Median Values after Outliers\n",
+    "data.Average_School_Rating.replace(0, np.nan, inplace=True)\n",
+    "data.Average_School_Rating = replace_nan_median(data.Average_School_Rating, remove_outliers_binary=True)\n",
+    "data.Average_School_Distance.replace(0, np.nan, inplace=True)\n",
+    "data.Average_School_Distance = replace_nan_median(data.Average_School_Distance, remove_outliers_binary=True)\n",
+    "\n",
     "#Filling Store Price level with median value\n",
     "data.Store_Price_Level = data.Store_Price_Level.fillna(data.Store_Price_Level.median())\n",
     "\n",
@@ -735,26 +752,30 @@
     "#Fill na with 0 for lot size; tried to fill with median value based on living area to lot size ratio\n",
     "data.Lot_Size = data.Lot_Size.fillna(data.Lot_Size.median())\n",
     "\n",
+    "# Gets all of the Zipcodes for each ZPID\n",
+    "zpid_zip_code = get_zipcode(data.Address)\n",
+    "data = data.merge(zpid_zip_code, left_index=True, right_index=True)\n",
+    "\n",
     "data.head().T"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
-   "metadata": {
-    "hidden": true
-   },
+   "execution_count": 40,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "file_name = 'FULLY_CLEANED_Aggregated_Home_Data_8.27.2019.csv'\n",
-    "pd.DataFrame.to_csv(data, path_or_buf= csv_data_path + file_name)"
+    "#file_name = 'FULLY_CLEANED_Aggregated_Home_Data_8.27.2019.csv'\n",
+    "#pd.DataFrame.to_csv(data, path_or_buf= csv_data_path + file_name)\n",
+    "pkl_dataframes_path = 'C:/Users/austi/Documents/Github_Repos/Imperial_Applied_Project/Detroit/Saved_Data/Pickle_DataFrames/'\n",
+    "pkl_file_name = 'Fully_Cleaned_House_Data_8.27.2019.pkl'\n",
+    "data.to_pickle(path=pkl_dataframes_path + pkl_file_name)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
+    "heading_collapsed": true
    },
    "source": [
     "### Notes"
@@ -814,19 +835,15 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Data Structures"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
-   "metadata": {
-    "hidden": true
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
     "category_mapping_dict = {\n",
@@ -890,21 +907,32 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Functions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
-   "metadata": {
-    "hidden": true
-   },
+   "execution_count": 38,
+   "metadata": {},
    "outputs": [],
    "source": [
+    "def get_zipcode(data_column):\n",
+    "    zip_code_list = []\n",
+    "    for index, row in data_column.iteritems():\n",
+    "        #print(row)\n",
+    "        zip_code_list.append(int(re.findall(\"48\\d{3}\", row)[0]))\n",
+    "    return pd.DataFrame(data=zip_code_list, index=data_column.index, columns=['Zip_Code'])\n",
+    "\n",
+    "def replace_nan_median(data_col, remove_outliers_binary):\n",
+    "    if remove_outliers_binary:\n",
+    "        col_median = data_col[np.abs(data_col-data_col.mean()) <= (3*data_col.std())].median()\n",
+    "        return data_col.fillna(col_median)\n",
+    "    else:\n",
+    "        col_median = data_col.median()\n",
+    "        return data_col.fillna(col_median)\n",
+    "\n",
     "def string_to_categories(data, col_list, mapping_dict):\n",
     "    df_cat = pd.DataFrame(data=None, index=data.index)\n",
     "    for col in col_list:\n",
