--- a/Zillow_Scraper/Data_Cleaning/API_Data_Pull.ipynb
+++ b/Zillow_Scraper/Data_Cleaning/API_Data_Pull.ipynb
@@ -42,8 +42,8 @@
     "import json\n",
     "import googlemaps\n",
     "import time\n",
-    "walk_score_key = '1bd3add9ea46f720e0de1be76e310f49'\n",
-    "gmaps = googlemaps.Client(key='AIzaSyBh70VUZ8iXuevsWjwrY42OBzW6y_-b5DU')"
+    "walk_score_key = ''\n",
+    "gmaps = googlemaps.Client(k)"
    ]
   },
   {
